--- a/css/agency.css
+++ b/css/agency.css
@@ -3,9 +3,17 @@
  * Copyright 2013-2019 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-agency/blob/master/LICENSE)
  */
+.tourist-spot{
+  color:blue !important;
+}
+
+.border-master{
+  border-style: solid;
+  border-color: green !important;
+}
 
 body {
-  overflow-x: hidden;
+  overflow-x: hidden; 
   font-family: 'Roboto Slab', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
@@ -173,10 +181,10 @@ img::-moz-selection {
 header.masthead {
   text-align: center;
   color: white;
-  background-image: url("../img/header-bg.jpg");
+  background-image: url("../img/header-bg.png");
   background-repeat: no-repeat;
   background-attachment: scroll;
-  background-position: center center;
+  background-position: center;
   background-size: cover;
 }
 
@@ -581,14 +589,14 @@ header.masthead .intro-text .intro-heading {
 }
 
 .team-member p {
-  margin-top: 0;
+  margin-top: 0px;
 }
 
 section#contact {
   background-color: #212529;
   background-image: url("../img/map-image.png");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center center;
 }
 
 section#contact .section-heading {
